# movie_auto_editor

./: .firebaserc  .gitignore  ClipMontage_要件定義書_v2.1.md  Dockerfile  PROCESSING_FLOW.md  QUICKSTART.md  README.md  app.py  config.yaml  docker-compose.dev.yml  docker-compose.yml  firebase.json  pyproject.toml  render.yaml  requirements.txt  start.bat  start_local.bat  start_local.ps1  test_models.py  test_setup.py
backend/: Dockerfile  Dockerfile.worker  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a001_initial_schema.py
backend/src/adapters/inbound/: celery_tasks.py  fastapi_app.py  websocket_handler.py
backend/src/adapters/inbound/api/: dashboard.py  dependencies.py  experiments.py  processing.py  projects.py
backend/src/adapters/outbound/ai/: gemini_vision.py  langchain_reasoning.py  multi_model.py  ollama_vision.py  whisper_stt.py
backend/src/adapters/outbound/ffmpeg/: ffmpeg_audio.py  ffmpeg_base.py  ffmpeg_cropper.py  ffmpeg_effects.py  ffmpeg_encoding.py  ffmpeg_text_overlay.py  ffmpeg_video_editor.py
backend/src/adapters/outbound/firebase/: firebase_auth.py  noop_auth.py
backend/src/adapters/outbound/media/: opencv_frames.py  pil_thumbnail.py  super_resolution.py  video_enhancer.py
backend/src/adapters/outbound/metrics/: file_metrics_store.py  mlflow_store.py
backend/src/adapters/outbound/persistence/: in_memory_experiment_repo.py  in_memory_project_repo.py  local_file_storage.py  postgres_experiment_repo.py  postgres_project_repo.py
backend/src/adapters/outbound/queue/: celery_queue.py  in_process_queue.py
backend/src/adapters/outbound/storage/: gcs_file_storage.py
backend/src/application/: __init__.py  creative_director.py  experiment_service.py  process_video_service.py  project_service.py
backend/src/application/dto/: __init__.py  experiment_config.py  process_request.py  process_result.py
backend/src/application/plugins/: base_content_plugin.py  fps_montage_plugin.py  general_plugin.py  plugin_registry.py
backend/src/core/: exceptions.py
backend/src/core/agents/: __init__.py  base_agent.py  creative_critic.py  pattern_analyzer.py
backend/src/core/entities/: __init__.py  analysis_result.py  clip.py  content_type.py  creative_direction.py  experiment.py  project.py  timeline.py  user.py  video.py
backend/src/core/events/: __init__.py  learning_events.py  project_events.py
backend/src/core/services/: __init__.py  clip_scorer.py  composition_planner.py  highlight_detector.py  reward_calculator.py
backend/src/core/value_objects/: __init__.py  effect_spec.py  quality_score.py  reward_signal.py  time_range.py
backend/src/infrastructure/: config.py  container.py  database.py  logging_config.py
backend/src/learning/: ablation_runner.py  bayesian_optimizer.py  experiment_tracker.py  parameter_space.py  reward_function.py
backend/src/learning/visualizations/: convergence_plots.py  correlation_analysis.py  parameter_heatmaps.py  quality_distributions.py
backend/src/ports/inbound/: __init__.py  manage_project_use_case.py  process_video_use_case.py  query_metrics_use_case.py  run_experiment_use_case.py
backend/src/ports/outbound/: __init__.py  audio_processing_port.py  encoding_port.py  experiment_repository_port.py  file_storage_port.py  frame_extraction_port.py  llm_reasoning_port.py  metrics_store_port.py  notification_port.py  project_repository_port.py  speech_to_text_port.py  task_queue_port.py  text_overlay_port.py  thumbnail_port.py  video_editing_port.py  vision_analysis_port.py  visual_effects_port.py  youtube_api_port.py
e2e/: package-lock.json  package.json  playwright.config.mjs
ollama-hf-space/: Dockerfile  README.md  start.sh
public/: index.html  privacy.html  terms.html
src/: __init__.py  audio_processor.py  composition_optimizer.py  effects.py  engagement_predictor.py  gpu_encoder.py  multi_model_analyzer.py  ollama_client.py  subtitle_generator.py  text_overlay.py  (+3 more)
(+40 files in other folders)
