[project]
name = "clipmontage"
version = "0.1.0"
description = "AI-powered video highlight extraction and montage creation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend/src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function call in argument defaults (needed for FastAPI Depends)
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = ["clipmontage_backend"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "dependency_injector.*",
    "moviepy.*",
    "cv2.*",
    "librosa.*",
    "soundfile.*",
    "pydub.*",
    "GPy.*",
    "mlflow.*",
    "sklearn.*",
    "scipy.*",
    "realesrgan.*",
    "gfpgan.*",
    "faster_whisper.*",
    "whisper.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require running services)",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["backend/src"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
fail_under = 70
