[project]
name = "clipmontage-backend"
version = "0.1.0"
description = "ClipMontage backend: AI-powered video highlight extraction and montage creation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Task queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Data validation and settings
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Computer vision and media
    "opencv-python>=4.8",
    "numpy>=1.26",
    "pillow>=10.0",
    "moviepy>=1.0.3",
    # HTTP clients
    "requests>=2.31",
    "httpx>=0.25",
    # Dependency injection
    "dependency-injector>=4.41",
    # ML experiment tracking
    "mlflow>=2.0",
    # Bayesian optimization and ML
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "GPy>=1.13",
    # Audio processing
    "librosa>=0.10",
    "soundfile>=0.12",
    "pydub>=0.25",
    # Google Cloud Storage
    "google-cloud-storage>=2.14",
    # Utilities
    "websockets>=12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=0.10",
    "openai-whisper>=20231117",
]
gpu = [
    "realesrgan>=0.3",
    "gfpgan>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
